force-app/main/default/objects/Guarantor__c/Guarantor__c.object-meta.xml
<CustomObject>
    <label>Guarantor</label>
    <pluralLabel>Guarantors</pluralLabel>
    <description>Stores personal and financial details of loan guarantors/co-signers.</description>
    <nameField>
        <label>Guarantor Name</label>
        <type>Text</type>
        
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>