force-app/main/default/objects/Guarantor__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <label>Address</label>
    <type>LongTextArea</type>
    <description>Address of the guarantor.</description>
    <inlineHelpText>Address of the guarantor.</inlineHelpText>
    <length>2000</length>
</CustomField>