force-app/main/default/objects/Guarantor__c/fields/Loan_Application__c.field-meta.xml
<CustomField>
    <fullName>Loan_Application__c</fullName>
    <label>Loan Application</label>
    <type>Lookup</type>
    <description>Associated loan application.</description>
    <inlineHelpText>Associated loan application.</inlineHelpText>
    <referenceTo>Loan_Application__c</referenceTo>
    <relationshipLabel>Guarantors</relationshipLabel>
    <relationshipName>Guarantors</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
    <required>true</required>
</CustomField>