force-app/main/default/objects/Guarantor__c/fields/Monthly_Salary_Amount__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Salary_Amount__c</fullName>
    <label>Monthly Salary Amount</label>
    <type>Currency</type>
    <description>Monthly net income of guarantor for asset validation.</description>
    <inlineHelpText>Monthly net income of guarantor for asset validation.</inlineHelpText>
    <precision>18</precision>
    <scale>2</scale>
    <required>true</required>
</CustomField>